# todo

./: Justfile
.github/workflows/: rust.yml
application/: Cargo.toml
application/src/: command.rs  commands.rs  lib.rs  port.rs  ports.rs  projection.rs  projections.rs  queries.rs  query.rs  services.rs  snapshot.rs
clients/mobile/: .gitignore  Cargo.toml  build-android.sh  build-ios.sh
clients/mobile/android/app/: build.gradle.kts
clients/mobile/android/app/src/androidTest/java/tech/forgen/todolist/: ExampleInstrumentedTest.kt
clients/mobile/android/app/src/main/java/rust/uniffi/mobile/: mobile.kt
clients/mobile/android/app/src/main/java/tech/forgen/todolist/: MainActivity.kt  TodoList.kt
clients/mobile/android/app/src/main/java/tech/forgen/todolist/rust/uniffi/mobile/: mobile.kt
clients/mobile/android/app/src/main/java/tech/forgen/todolist/ui/theme/: Color.kt  Theme.kt  Type.kt
clients/mobile/android/app/src/test/java/tech/forgen/todolist/: ExampleUnitTest.kt
clients/mobile/android/gradle/wrapper/: gradle-wrapper.properties
clients/mobile/ios/Mobile.xcframework/ios-arm64/Headers/: mobileFFI.h
clients/mobile/ios/TodoList/: ContentView.swift  Mobile.swift  TodoListApp.swift
clients/mobile/ios/TodoList.xcodeproj/: project.pbxproj
clients/mobile/ios/TodoList.xcodeproj/project.xcworkspace/xcuserdata/alexandrehanot.xcuserdatad/: UserInterfaceState.xcuserstate
clients/mobile/src/: client.rs  dto.rs  lib.rs  runtime.rs
domain/: Cargo.toml
services/: Cargo.toml
services/src/: lib.rs  local_storage.rs  localstore.rs  memstore.rs
(+26 files in other folders)
