[package]
name = "mobile"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["cdylib", "staticlib"]
name = "mobile"

[dependencies]
application = { path = "../../application" }
framework = { path = "../../crates/framework" }
services = { path = "../../services", features = [ "memstore" ] }
uniffi = { version = "0.25.3", features = [ "cli" ] }
